// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallRoute component should display install modal if app found in the registry but not installed 1`] = `
<withRouter(Install)
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "name": "Photos",
      "name_prefix": "Cozy",
      "slug": "photos",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  parent="/myapps"
/>
`;

exports[`InstallRoute component should display install modal if app found in the registry installed but with available version 1`] = `
<withRouter(Install)
  app={
    Object {
      "availableVersion": true,
      "categories": Array [
        "partners",
      ],
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Tasky",
      "slug": "tasky",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "1.0.0",
        ],
        "dev": Array [
          "1.0.0",
        ],
        "stable": Array [
          "1.0.0",
        ],
      },
    }
  }
  parent="/myapps"
/>
`;
